test/mutation_analysis/s0455_assign_cookies/hafis/ablation_o3_full/mutants/9/result.txt
./test/mutation_analysis/s0455_assign_cookies/hafis/ablation_o3_full/mutants/9/Solution.java:19: error: unreachable statement
        while (false) {
                      ^
1 error
